--- a/micro_con_lab1.ioc
+++ b/micro_con_lab1.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -9,29 +17,33 @@ LPUART1.IPParameters=BaudRate,WordLength
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
-Mcu.IP0=LPUART1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=LPUART1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM3
+Mcu.IPNb=6
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_DBSignals
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_SYS_VS_DBSignals
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM3_VS_no_output1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -48,8 +60,10 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
 PA13.Locked=true
@@ -78,6 +92,8 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
 PC13.Locked=true
@@ -125,7 +141,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -178,14 +194,21 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-TIM2.IPParameters=Prescaler
-TIM2.Prescaler=169
+SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM3.IPParameters=Prescaler,PeriodNoDither,Channel-PWM Generation1 No Output,PulseNoDither_1
+TIM3.PeriodNoDither=19999
+TIM3.Prescaler=169
+TIM3.PulseNoDither_1=2000
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 board=NUCLEO-G474RE
 boardIOC=true
 isbadioc=false
